# wave-simulation

./: CMakeLists.txt  INSTALL  README.md
doc/: model-notes.lyx
src/: BiFlattener.hpp  CMakeLists.txt  GridData.cpp  GridData.h  InteractionController.cpp  Simulation.cpp  Simulation.h
src/qtgui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyGLWidget.cpp  MyGLWidget.h  main.cpp  main.qrc
src/render/: MeshRenderer.cpp  MeshRenderer.h
src/rendering/: ImageRenderer.cpp  ImageRenderer.h  MeshRenderer.cpp  MeshRenderer.h
src/simulation/: GridData.cpp  InteractionController.h  Perturbator.cpp  Perturbator.h
